# xmz-snapshot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cmd.rs  main.rs
