[package]
name = "xmz-snapshot"
version = "0.2.0"
authors = ["Stefan Müller <s.mueller@it.kls-glt.de>"]
description = "Make screenshots from 'xMZ-Mod-Touch' platform"
documentation = ""
homepage = "https://zzeroo.com"
repository = "https://github.com/zzeroo/xmz-snapshot"

readme = "README.md"

keywords = ["xmz", "tool", "xMZ-Mod-Touch"]

license = "GPL-2.0"

[dependencies]
clap = { version = "*", features = ["unstable"] }
